# scan

./: .env  .gitignore  Makefile  README.md  TODO  pyproject.toml
.github/: dependabot.yml
.github/workflows/: api.yml  beat.yml  front.yml  frontend.yml  rabbit.yml  worker.yml
assets/: scans.json
assets/A Gate Opened on My First Day as a Politician/: scans.json
assets/A Returners Magic Should Be Special/: scans.json
assets/Absolute Necromancer/: scans.json
assets/Academy’s Genius Swordmaster/: scans.json
assets/Apotheosis/: scans.json
back/: config.json  main.py  parsers.py  requirements.txt  schema.py  update_json.py  utils.py
back/api/: admin.py  main.py
back/api/security/: authentication.py
back/api/views/: address_view.py  scan_view.py
back/core/: config.py  exceptions.py  external_request_metrics.py  schema.py
back/core/controllers/: scan_controller.py
back/core/database/: address_access_database.py  address_database.py  auto_correction_database.py  config_country_to_provider_database.py
back/requirements/: requirements.txt
back/worker/: requirements.txt
back/worker/controllers/: asura_scan_controller.py
back/worker/tasks/: scraper.py
backend/: Dockerfile  requirements.txt
backend/api/: admin.py  main.py  utils.py
backend/api/views/: address_view.py  user_view.py
backend/core/: config.py  db.py  schema.py
backend/core/database/: address_correction_request_database.py  country_search_provider_database.py  models.py  provider_database.py  provider_result_database.py  statistics_database.py
backend/docker/: beat.Dockerfile  rabbitmq.Dockerfile  worker.Dockerfile
backend/migrations/: env.py
backend/worker/: celery_worker.py  requirements.txt  schema.py  scraper.py
backend/worker/tasks/: database.py
front/: Dockerfile  angular.json  package-lock.json  package.json
front/src/: index.html
front/src/app/: app.component.ts  app.config.ts  app.routes.ts
front/src/app/footer/: footer.component.ts
front/src/app/header/: header.component.ts
front/src/app/pages/: chapter-viewer.component.ts  home.component.ts  scan-detail.component.ts  scan-details.component.ts  scan-list.component.ts  scan-reader.component.ts  scan-viewer.component.ts
front/src/app/pages/home/: home.component.ts
front/src/app/pages/scan-details/: scan-details.component.ts
front/src/app/pages/scan-list/: scan-list.component.ts
front/src/app/pages/scan-reader/: scan-reader.component.ts
front/src/app/services/: scan.service.ts  theme.service.ts
front/src/assets/styles/layout/: _content.scss  _footer.scss  _topbar.scss  _utils.scss  _variables.scss
frontend/: nginx.conf  package-lock.json  package.json
helm-releases/: api-deployment.yaml
infra/: install.sh  promtail-values.yaml
scripts/: config.json  config.py  main.py  parsers.py  reaper_scans_scraper.py  requirements.txt  schema.py  update_json.py  utils.py
(+2 files in other folders)
