[project]
name = "scan"
description = "Scan project"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Larry Mota--Lavigne", email = "larry.motalavigne@gmail.com" },
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/atomstudiosfr/scan"

[project.optional-dependencies]
test = [
    "pytest >=7.1.3,<8.0.0",
    "coverage[toml] >= 6.5.0,< 8.0",
    "mypy ==0.982",
    "ruff ==0.0.138",
    "black == 23.1.0",
    "isort >=5.0.6,<6.0.0",
    "httpx >=0.23.0,<0.24.0",
    "email_validator >=1.1.1,<2.0.0",
    "sqlalchemy >=1.3.18,<1.4.43",
    "peewee >=3.13.3,<4.0.0",
    "databases[sqlite] >=0.3.2,<0.7.0",
    "orjson >=3.2.1,<4.0.0",
    "ujson >=4.0.1,!=4.0.2,!=4.1.0,!=4.2.0,!=4.3.0,!=5.0.0,!=5.1.0,<6.0.0",
    "python-multipart >=0.0.5,<0.0.7",
    "flask >=1.1.2,<3.0.0",
    "anyio[trio] >=3.2.1,<4.0.0",
    "python-jose[cryptography] >=3.3.0,<4.0.0",
    "pyyaml >=5.3.1,<7.0.0",
    "passlib[bcrypt] >=1.7.2,<2.0.0",

    # types
    "types-ujson ==5.7.0.1",
    "types-orjson ==3.6.2",
]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=8.1.4,<9.0.0",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.1.7,<0.3.0",
    "typer-cli >=0.0.13,<0.0.14",
    "typer[all] >=0.6.1,<0.8.0",
    "pyyaml >=5.3.1,<7.0.0",
]
dev = [
    "ruff ==0.0.138",
    "uvicorn[standard] >=0.12.0,<0.30.0",
    "pre-commit >=2.17.0,<3.0.0",
]
all = [
    "httpx >=0.23.0",
    "jinja2 >=2.11.2",
    "python-multipart >=0.0.5",
    "itsdangerous >=1.1.0",
    "pyyaml >=5.3.1",
    "ujson >=4.0.1,!=4.0.2,!=4.1.0,!=4.2.0,!=4.3.0,!=5.0.0,!=5.1.0",
    "orjson >=3.2.1",
    "email_validator >=1.1.1",
    "uvicorn[standard] >=0.12.0",
]

[tool.hatch.version]
path = "fastapi/__init__.py"

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "fastapi.concurrency"
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.tests.*"
ignore_missing_imports = true
check_untyped_defs = true
