[project]
name = "scan"
description = "Scan project"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Larry Mota--Lavigne", email = "larry@atomstudios.fr" },
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/atomstudiosfr/scan"

[tool.hatch.version]
path = "fastapi/__init__.py"

[tool.isort]
profile = "black"
known_third_party = ["fastapi", "pydantic", "starlette"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "fastapi.concurrency"
warn_unused_ignores = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi.tests.*"
ignore_missing_imports = true
check_untyped_defs = true
